@@ -1,5 +1,9 @@
 2004-01-29  Markus Peter  <warp@spin.de>
 
+	* lib/Psh2/Frontend/Editline.pm: Respects "editmode" option
+	
+	* lib/Psh2/Builtins/Sleep.pm: Sleep builtin featuring fractional seconds 
+
 	* lib/Psh2/Builtins/Printf.pm: New printf builtin 
 
 2004-01-28  Markus Peter  <warp@spin.de>
